feat: Add fade-in animation for elements
Introduces a new CSS animation class `animate-fadeIn` to provide a smooth, subtle entry animation for elements. This enhances the user experience by making content appear more gracefully on page load.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
         .animate-breathe {
             animation: breathe 4s ease-in-out infinite;
         }
+
+        /* Animación de entrada suave */
+        .animate-fadeIn {
+            animation: fadeIn 0.8s ease-out forwards;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
     </style>
 <script type="importmap">
 {
@@ -47,5 +56,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <!-- Carga de la aplicación React -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
