--- a/index.html
+++ b/index.html
@@ -12,20 +12,11 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #fdfcf9; /* Crema muy suave */
+            background-color: #fdfcf9;
         }
         h1, h2, h3, .font-serif {
             font-family: 'Playfair Display', serif;
         }
-        /* Paleta Pastel Aum Shala */
-        .bg-pastel-sage { background-color: #e8ede8; }
-        .bg-pastel-cream { background-color: #fcfbf7; }
-        .bg-pastel-rose { background-color: #fdf2f2; }
-        .bg-sage-dark { background-color: #4a5d4a; }
-        .text-sage-dark { color: #3d4f3d; }
-        .border-pastel-sage { border-color: #d8e0d8; }
-
-        /* Animación de Respiración para la carga */
         @keyframes breathe {
             0%, 100% { transform: scale(1); opacity: 0.5; }
             50% { transform: scale(1.4); opacity: 0.2; }
@@ -33,8 +24,6 @@
         .animate-breathe {
             animation: breathe 4s ease-in-out infinite;
         }
-
-        /* Animación de entrada suave */
         .animate-fadeIn {
             animation: fadeIn 0.8s ease-out forwards;
         }
@@ -47,16 +36,17 @@
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react-dom": "https://esm.sh/react-dom@^19.2.3",
+    "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
 </head>
 <body>
     <div id="root"></div>
-    <!-- Carga de la aplicación React -->
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
